--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -30,4 +30,16 @@
     <string name="search_book_popular_keyword_title">이번 달 인기 키워드에요 ✨</string>
     <string name="search_book_result_title">#VALUE# 도서명 검색 결과</string>
 
+    <string name="read_review_title">주변 리뷰 보기</string>
+    <string name="read_review_title_age">#VALUE#대</string>
+    <string name="read_review_more_detail">더보기</string>
+    <string name="read_review_fold">접어두기</string>
+
+    <string name="date_type_error">잘못된 접근입니다.</string>
+    <string name="date_type_now">방금 전</string>
+    <string name="date_type_minutes">#VALUE#분 전</string>
+    <string name="date_type_hours">#VALUE#시간 전</string>
+
+    <string name="common_close">닫기</string>
+    <string name="common_see_detail">자세히 보기</string>
 </resources>
