--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">I book u</string>
+    <string name="app_name">I Book U</string>
     <string name="nav_home">홈</string>
     <string name="nav_menu">메뉴</string>
 
@@ -69,6 +69,9 @@
     <string name="search_book_recent_keyword_title">최근에 검색했어요 🔎</string>
     <string name="search_book_popular_keyword_title">이번 달 인기 키워드에요 ✨</string>
     <string name="search_book_result_title">#VALUE# 도서명 검색 결과</string>
+    <string name="search_book_no_result_title">검색 결과가 없습니다.</string>
+    <string name="search_book_no_result_subtitle">찾고 있는 도서가 있나요?\n문의하기를 통해 도서를 요청할 수 있습니다.</string>
+    <string name="search_book_cs">도서 문의하기</string>
 
     <string name="read_review_title">주변 리뷰 보기</string>
     <string name="read_review_title_age">#VALUE#대</string>
@@ -102,6 +105,7 @@
     <string name="book_detail_order_past">오래된순</string>
     <string name="book_detail_order_high_rating">별점 높은순</string>
     <string name="book_detail_order_low_rating">별점 낮은순</string>
+    <string name="book_detail_no_review">리뷰가 없어요 😂</string>
 
     <string name="book_near_library_distance">현재 위치로부터 #VALUE# 떨어진 곳에 위치</string>
     <string name="book_near_library_direction_guide">길안내</string>
@@ -114,6 +118,8 @@
 
     <string name="error_title_1">오류가 발생했습니다.</string>
     <string name="error_msg_1">알 수 없는 오류가 발생했습니다.\n해당 증상이 지속될 시, 관리자에게 문의해주세요.</string>
+
+    <string name="error_title_2">조회된 정보가 없습니다.</string>
 
     <string name="common_close">닫기</string>
     <string name="common_done">확인</string>
